--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -32,6 +32,6 @@
         android:progress="0"
         android:background="@android:color/transparent"
         android:progressTint="@android:color/holo_red_light"
-        android:visibility="gone"/> <!-- Initially hidden -->
+        android:visibility="gone"/>
 
 </LinearLayout>
